@@ -1,3 +1,6 @@
+[B]Version 0.4.6[/B]
+- Fixed: addon.xml to get into official repository
+
 [B]0.0.1[/B]
 
 - Initial addon
